--- a/PutovanjaMenadzerApp-war/web/jednoputovanje.xhtml
+++ b/PutovanjaMenadzerApp-war/web/jednoputovanje.xhtml
@@ -9,85 +9,86 @@
         <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
     </h:head>
     <h:body>
-        <f:view>
+        <ui:composition template="ltemplate.xhtml">
 
+            <ui:define name="content">
+                <f:view>
 
-            <h:form>
-                <p:tabView>
-                    <p:tab title="Godfather Part I">
+                    <h:form>
+
+                        <h3>#{putovanje.naziv}</h3>
                         <p:panelGrid columns="2">
                             <h:outputText value="DatumOd:"/>
-                            <h:outputText value="#{svaPutovanjaManagedBean.selektovanoPutovanje.datumOd}" title="DatumOd">
+                            <h:outputText value="#{putovanje.datumOd}" title="DatumOd">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
                             </h:outputText>
                             <h:outputText value="DatumDo:"/>
-                            <h:outputText value="#{svaPutovanjaManagedBean.selektovanoPutovanje.datumDo}" title="DatumDo">
+                            <h:outputText value="#{putovanje.datumDo}" title="DatumDo">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
                             </h:outputText>
                             <h:outputText value="BiciklistaId:"/>
-                            <h:outputText value="#{svaPutovanjaManagedBean.selektovanoPutovanje.biciklistaId}" title="BiciklistaId"/>
-                            <h:outputText value="Naziv:"/>
-                            <h:outputText value="#{svaPutovanjaManagedBean.selektovanoPutovanje.naziv}" title="Naziv"/>
+                            <h:outputText value="#{putovanje.biciklistaId}" title="BiciklistaId"/>
+                           
                             <h:outputText value="IdPutovanje:"/>
-                            <h:outputText value="#{svaPutovanjaManagedBean.selektovanoPutovanje.idPutovanje}" title="IdPutovanje"/>
-                            <h:outputText value="Trekovi"/>
-                            <p:carousel value="#{svaPutovanjaManagedBean.selektovanoPutovanje.trekList}" headerText="Basic" var="trek">
-                                <h:panelGrid columns="2" style="width:100%" cellpadding="5" columnClasses="label,value">
+                            <h:outputText value="#{putovanje.idPutovanje}" title="IdPutovanje"/>
 
 
-                                    <h:outputText value="Id:" />
-                                    <h:outputText value="#{trek.naziv}" />
-
-                                    <h:outputText value="Year" />
-                                    <h:outputText value="#{trek.kilometraza}" />
 
 
-                                </h:panelGrid>
-
-                                <f:facet name="footer">
-                                    In total there are #{svaPutovanjaManagedBean.selektovanoPutovanje.trekList.size()} trekova.
-                                </f:facet>
-                            </p:carousel>
-                            <p:growl id="growl" life="3000" />
-
-                            <p:gmap id="gmap" center="36.890257,30.707417" zoom="13" type="HYBRID" style="width:600px;height:400px" model="#{prikazTrekaManagedBean.polylineModel}">
-                                <p:ajax event="overlaySelect" listener="#{prikazTrekaManagedBean.onPolylineSelect}" update="growl" />
-                            </p:gmap>
                         </p:panelGrid>
-                    </p:tab>
-                    <p:tab title="Godfather Part II">
-                        <h:form id="unos">
-                            <p:outputLabel value="Naziv:" for="nazivtreka" />
-                            <p:inputText id="nazivtreka" value="#{putovanjeManagedBean.trek.naziv}" title="Naziv" />
-                            <p:commandButton value="Dodaj trek" type="submit" ajax="false" action="#{putovanjeManagedBean.dodajTrek()}"/>
-                            <p:growl id="messages" showDetail="true" autoUpdate="true"  />
-                        </h:form>
-                        <h:form id="unosFajla" enctype="multipart/form-data">
-                            <p:fileUpload fileUploadListener="#{putovanjeManagedBean.handleFileUpload}" mode="advanced" dragDropSupport="false"
-                                          required="true"/>
-                        </h:form>
-
-                    </p:tab>
-                    <p:tab title="Godfather Part III">
-                        <h:panelGrid columns="2" cellpadding="10">
-                            <p:graphicImage name="demo/images/godfather/godfather3.jpg" />
-                            <h:outputText value="After a break of more than 15 years..." />
-                        </h:panelGrid>
-                    </p:tab>
-                </p:tabView>
+                        <p:carousel  value="#{putovanje.trekList}" headerText="Trekovi" var="trek">
+                            <h:panelGrid columns="2" style="width:100%" cellpadding="5" columnClasses="label,value">
 
 
-            </h:form>
+                                <h:outputText value="Naziv:" />
+                                <h:outputText value="#{trek.naziv}" />
+
+                                <h:outputText value="Kilometraza:" />
+                                <h:outputText value="#{trek.kilometraza}" />
+                                <p:commandButton  action="dodajtrek" icon="ui-icon-search">
+
+                                </p:commandButton>
+
+                            </h:panelGrid>
+
+                            <f:facet name="footer">
+
+                                In total there are #{putovanje.trekList.size()} trekova.
+                            </f:facet>
+                        </p:carousel>
+                        <p:growl id="growl" life="3000" />
+                        <p:fieldset style="width: 600px;" legend="Mapa" toggleable="true" toggleSpeed="500">
+                            <p:ajax event="toggle"  />
+
+                            #{prikazTrekaManagedBean.prikaziTrek()}
+                            <p:gmap   id="gmap" center="#{prikazTrekaManagedBean.kordinate}" fitBounds="true"  zoom="8" type="MAP" style="width:600px;height:400px" model="#{prikazTrekaManagedBean.polylineModel}">
+                                <p:ajax  event="overlaySelect" listener="#{prikazTrekaManagedBean.onPolylineSelect}" update="growl" />
+                            </p:gmap>
+
+                        </p:fieldset>
 
 
-        </f:view>
-        <h:form>
-            <h3>Ajax</h3>
-            <p:tree value="#{treeBasicView.root}" var="node" dynamic="true">
-                <p:treeNode>
-                    <h:outputText value="#{node}" />
-                </p:treeNode>
-            </p:tree>
-        </h:form>
+
+
+
+
+                    </h:form>
+
+
+                </f:view>
+            </ui:define>
+            <ui:define name="menu">
+                <p:submenu label="Putovanje">
+                    <p:menuitem value="Dodaj trek" outcome="dodajtrek" icon="ui-icon-home"/>
+                    <p:menuitem value="Izmeni putovanje"  icon="ui-icon-star"/>
+                    <p:menuitem value="Izbrisi putovanje"   outcome="svaputovanja" icon="ui-icon-star"/>
+                </p:submenu>
+            </ui:define>
+
+        </ui:composition>
+
+
+
+
     </h:body>
 </html>
