--- a/PutovanjaMenadzerApp-war/web/dodajputovanje.xhtml
+++ b/PutovanjaMenadzerApp-war/web/dodajputovanje.xhtml
@@ -18,19 +18,22 @@
                         <p:panelGrid id="putovanje" columns="2">
 
                             <p:outputLabel value="Naziv:" for="naziv" />
-                            <p:inputText id="naziv" value="#{putovanje2ManagedBean.putovanje.naziv}" title="Naziv" required="true" requiredMessage="The Naziv field is required."/>
+                            <p:inputText id="naziv" value="#{putovanjeManagedBean.putovanje.naziv}" title="Naziv" required="true" requiredMessage="The Naziv field is required."/>
                             <p:outputLabel value="DatumOd:" for="datumOd" />
-                            <p:calendar id="datumOd" value="#{putovanje2ManagedBean.putovanje.datumOd}" title="DatumOd">
+                            <p:calendar id="datumOd" value="#{putovanjeManagedBean.putovanje.datumOd}" title="DatumOd">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
                             </p:calendar>
                             <p:outputLabel value="DatumDo:" for="datumDo" />
-                            <p:calendar id="datumDo" value="#{putovanje2ManagedBean.putovanje.datumDo}" title="DatumDo">
+                            <p:calendar id="datumDo" value="#{putovanjeManagedBean.putovanje.datumDo}" title="DatumDo">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
                             </p:calendar>
+                            <p:outputLabel value="Mesta:" for="mesta" />
+                            <p:pickList id="mesta" value="#{putovanjeManagedBean.mesta}" var="m" itemLabel="#{m.naziv}" itemValue="#{m}"
+                                        showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains" converter="mestoConverter"/>
 
                         </p:panelGrid>
-                      <br/>
-                        <p:commandButton value="Sacuvaj putovanje" type="submit" action="#{putovanje2ManagedBean.sacuvajPutovanje()}" update="@all"/>
+                        <br/>
+                        <p:commandButton value="Sacuvaj putovanje" type="submit" action="#{putovanjeManagedBean.sacuvajPutovanje()}" update="@all"/>
                         <p:growl id="messages" showDetail="true" autoUpdate="true" />
                     </h:form>
 
