--- a/PutovanjaMenadzerApp-war/web/header.xhtml
+++ b/PutovanjaMenadzerApp-war/web/header.xhtml
@@ -4,18 +4,11 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
-    <h2>
-        <h:form>
-            <p:menubar  >
-
-                <p:menuitem value="Sva putovanja" action="svaputovanja.xhtml" />
-                <p:submenu   label="Profil" icon="ui-icon-gear">
-                    <p:menuitem value="Moj nalog" url="izmenikorisnika.xhtml" />
-                    <p:menuitem value="Odjavi se" action="#{logInManagedBean.logout()}"/>
-                </p:submenu>
-
-            </p:menubar>
-        </h:form>
-    </h2>
+    <h:form>
+        <p:menubar>
+            <p:menuitem value="Ulogovani korisnik: #{logInManagedBean.korisnik.username}" disabled="true" />
+            <p:menuitem value="Moj nalog" url="izmenikorisnika.xhtml" />
+            <p:menuitem value="Odjavi se" action="#{logInManagedBean.logout()}"/>
+        </p:menubar>
+    </h:form>
 </html>
