--- a/PutovanjaMenadzerApp-war/web/izmenikorisnika.xhtml
+++ b/PutovanjaMenadzerApp-war/web/izmenikorisnika.xhtml
@@ -7,52 +7,61 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head></h:head>
     <h:body>
-        <f:view contentType="text/html">
+        <ui:composition template="ltemplate.xhtml">
+
+            <ui:define name="content">
+                <f:view contentType="text/html">
 
 
-            <h:form>
-                <h1><h:outputText value="Registracija korisnika"/></h1>
-                <p:panelGrid columns="2">
-                    <p:outputLabel value="IdKorisnik:" for="idKorisnik" rendered="false" />
-                    <p:inputText id="idKorisnik" value="#{logInManagedBean.korisnik.idKorisnik}" title="IdKorisnik" 
-                                 required="true" requiredMessage="The IdKorisnik field is required."
-                                 rendered="false"/>
-                    <p:outputLabel value="Ime:" for="ime" />
-                    <p:inputText id="ime" value="#{logInManagedBean.korisnik.ime}" title="Ime" />
-                    <p:outputLabel value="Prezime:" for="prezime" />
-                    <p:inputText id="prezime" value="#{logInManagedBean.korisnik.prezime}" title="Prezime" />
-                    <p:outputLabel value="Jmbg:" for="jmbg" />
-                    <p:inputText id="jmbg" value="#{logInManagedBean.korisnik.jmbg}" title="Jmbg" />
-                    <p:outputLabel value="NazivBicikla:" for="nazivBicikla" />
-                    <p:inputText id="nazivBicikla" value="#{logInManagedBean.korisnik.nazivBicikla}" title="NazivBicikla" />
-                    <p:outputLabel value="TipBicikla:" for="tipBicikla" />
-                    <p:selectOneMenu id="tipBicikla" value="#{logInManagedBean.korisnik.tipBicikla}" >
-                        <f:selectItem itemLabel="Select One" itemValue="" />
-                        <f:selectItems value="#{korisnikbean.tipoviBicikla()}" var="tip"
-                                       itemLabel="#{tip}" itemValue="#{tip}"/>
+                    <h:form>
+                        <h1><h:outputText value="Promena podataka"/></h1>
+                        <p:panelGrid columns="2">
+                            <p:outputLabel value="IdKorisnik:" for="idKorisnik" rendered="false" />
+                            <p:inputText id="idKorisnik" value="#{logInManagedBean.korisnik.idKorisnik}" title="IdKorisnik" 
+                                         required="true" requiredMessage="The IdKorisnik field is required."
+                                         rendered="false"/>
+                            <p:outputLabel value="Ime:" for="ime" />
+                            <p:inputText id="ime" value="#{logInManagedBean.korisnik.ime}" title="Ime" />
+                            <p:outputLabel value="Prezime:" for="prezime" />
+                            <p:inputText id="prezime" value="#{logInManagedBean.korisnik.prezime}" title="Prezime" />
+                            <p:outputLabel value="Jmbg:" for="jmbg" />
+                            <p:inputText id="jmbg" value="#{logInManagedBean.korisnik.jmbg}" title="Jmbg" />
+                            <p:outputLabel value="NazivBicikla:" for="nazivBicikla" />
+                            <p:inputText id="nazivBicikla" value="#{logInManagedBean.korisnik.nazivBicikla}" title="NazivBicikla" />
+                            <p:outputLabel value="TipBicikla:" for="tipBicikla" />
+                            <p:selectOneMenu id="tipBicikla" value="#{logInManagedBean.korisnik.tipBicikla}" >
+                                <f:selectItem itemLabel="Select One" itemValue="" />
+                                <f:selectItems value="#{korisnikbean.tipoviBicikla()}" var="tip"
+                                               itemLabel="#{tip}" itemValue="#{tip}"/>
 
 
-                    </p:selectOneMenu>
-                    <p:outputLabel value="Email:" for="email" />
-                    <p:inputText id="email" value="#{logInManagedBean.korisnik.email}" title="Email" required="true" requiredMessage="The Email field is required."/>
-                    <p:outputLabel value="Password:" for="password" />
-                    <p:inputText id="password" value="#{logInManagedBean.korisnik.password}" title="Password" required="true" requiredMessage="The Password field is required."/>
-                    <p:outputLabel value="Username:" for="username" />
-                    <p:inputText id="username" value="#{logInManagedBean.korisnik.username}" title="Username" required="true" requiredMessage="The Username field is required."/>
-                    <p:outputLabel value="Mesto:" for="mestoID" />
-                    <p:selectOneMenu id="mestoID" value="#{logInManagedBean.mestoId}" >
-                        <f:selectItem itemLabel="Select One" itemValue="" />
-                        <f:selectItems value="#{korisnikbean.svaMesta()}" var="m"
-                                       itemLabel="#{m.naziv}" itemValue="#{m.idMesto}"/>
+                            </p:selectOneMenu>
+                            <p:outputLabel value="Email:" for="email" />
+                            <p:inputText id="email" value="#{logInManagedBean.korisnik.email}" title="Email" required="true" requiredMessage="The Email field is required."/>
+                            <p:outputLabel value="Password:" for="password" />
+                            <p:inputText id="password" value="#{logInManagedBean.korisnik.password}" title="Password" required="true" requiredMessage="The Password field is required."/>
+                            <p:outputLabel value="Username:" for="username" />
+                            <p:inputText id="username" value="#{logInManagedBean.korisnik.username}" title="Username" required="true" requiredMessage="The Username field is required."/>
+                            <p:outputLabel value="Mesto:" for="mestoID" />
+                            <p:selectOneMenu id="mestoID" value="#{logInManagedBean.mestoId}" >
+                                <f:selectItem itemLabel="Select One" itemValue="" />
+                                <f:selectItems value="#{korisnikbean.svaMesta()}" var="m"
+                                               itemLabel="#{m.naziv}" itemValue="#{m.idMesto}"/>
 
 
-                    </p:selectOneMenu>
-                    <p:commandButton value="Submit" id="submit" actionListener="#{logInManagedBean.izmeniPodatke()}" type="submit"/>
+                            </p:selectOneMenu>
+                            <p:commandButton value="Submit" id="submit" actionListener="#{logInManagedBean.izmeniPodatke()}" type="submit" update="messages"/>
+                            
+                        </p:panelGrid>
 
-                </p:panelGrid>
+                    </h:form>
+                </f:view>
+                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 
-            </h:form>
-        </f:view>
-        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+            </ui:define>
+
+
+        </ui:composition>
+
     </h:body>
 </html>
