--- a/PutovanjaMenadzerApp-war/web/korisniknaputovanju.xhtml
+++ b/PutovanjaMenadzerApp-war/web/korisniknaputovanju.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui" 
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
     </h:head>
@@ -13,33 +14,26 @@
 
             <ui:define name="content">
                 <f:view>
-                    <h3>#{putovanje.naziv}</h3>
-                    <h3>Dodaj trek:</h3>
-
-
-                    <h:form id="unos">
-                        <p:outputLabel value="Naziv:" for="nazivtreka" />
-                        <p:inputText id="nazivtreka" value="#{trekManagedBean.trek.naziv}" title="Naziv" />
-                        <p:commandButton value="Dodaj trek" type="submit" update=":trekovi" ajax="false" action="#{trekManagedBean.dodajTrek()}"/>
-                        <p:growl id="messages" showDetail="true" autoUpdate="true"  />
-
+                    <h:form>
+                        <p:outputLabel value="Korisnici za putovanje #{putovanjeManagedBean.putovanje.naziv}:" for="korisnici" />
+                        <br/>
+                        <br/>
+                        <p:pickList id="korisnici" value="#{korisniciNaPutovanjuManagedBean.korisnici}" var="k" itemLabel="#{k.ime} #{k.prezime}" itemValue="#{k}"
+                                    showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains" converter="korisnikConverter"/>
+                        <p:commandButton value="Sacuvaj" type="submit" action="#{korisniciNaPutovanjuManagedBean.registrujKorisnike()}" update="growl"/>
+                        <p:growl id="growl" life="3000" />
                     </h:form>
-                    <h:form id="unosFajla" enctype="multipart/form-data">
-                        <p:fileUpload fileUploadListener="#{trekManagedBean.handleFileUpload}" mode="advanced" dragDropSupport="false"
-                                      required="true"/>
-                    </h:form>
-
-
 
 
                 </f:view>
             </ui:define>
             <ui:define name="menu">
-                <p:submenu rendered="#{logInManagedBean.korisnik eq putovanjeManagedBean.putovanje.biciklistaId }" label="Putovanje">
+                <p:submenu label="Putovanje">
                     <p:menuitem value="Prikazi putovanje" outcome="jednoputovanje" icon="ui-icon-home"/>
                     <p:menuitem value="Dodaj trek" outcome="dodajtrek" icon="ui-icon-home"/>
                     <p:menuitem value="Izmeni putovanje"  icon="ui-icon-star" outcome="izmeniputovanje"/>
                     <p:menuitem value="Dodaj korisnike"   outcome="korisniknaputovanju" icon="ui-icon-star"/>
+
                 </p:submenu>
             </ui:define>
 
