--- a/PutovanjaMenadzerApp-war/web/registracija.xhtml
+++ b/PutovanjaMenadzerApp-war/web/registracija.xhtml
@@ -5,54 +5,59 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui" 
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head></h:head>
+    <h:head>
+        <link href="resources/css/style.css" rel="stylesheet" type="text/css" />
+    </h:head>
     <h:body>
-        <f:view contentType="text/html">
+         
+        <div class="reg-card">
+            <f:view contentType="text/html">
 
 
-            <h:form>
-                <h1><h:outputText value="Registracija korisnika"/></h1>
-                <p:panelGrid columns="2">
-                    <p:outputLabel value="IdKorisnik:" for="idKorisnik" rendered="false" />
-                    <p:inputText id="idKorisnik" value="#{korisnikbean.korisnik.idKorisnik}" title="IdKorisnik" 
-                                 required="true" requiredMessage="The IdKorisnik field is required."
-                                 rendered="false"/>
-                    <p:outputLabel value="Ime:" for="ime" />
-                    <p:inputText id="ime" value="#{korisnikbean.korisnik.ime}" title="Ime" />
-                    <p:outputLabel value="Prezime:" for="prezime" />
-                    <p:inputText id="prezime" value="#{korisnikbean.korisnik.prezime}" title="Prezime" />
-                    <p:outputLabel value="Jmbg:" for="jmbg" />
-                    <p:inputText id="jmbg" value="#{korisnikbean.korisnik.jmbg}" title="Jmbg" />
-                    <p:outputLabel value="NazivBicikla:" for="nazivBicikla" />
-                    <p:inputText id="nazivBicikla" value="#{korisnikbean.korisnik.nazivBicikla}" title="NazivBicikla" />
-                    <p:outputLabel value="TipBicikla:" for="tipBicikla" />
-                    <p:selectOneMenu id="tipBicikla" value="#{korisnikbean.korisnik.tipBicikla}" >
-                        <f:selectItem itemLabel="Select One" itemValue="" />
-                        <f:selectItems value="#{korisnikbean.tipoviBicikla()}" var="tip"
-                                       itemLabel="#{tip}" itemValue="#{tip}"/>
+                <h:form>
+                    <h1><h:outputText value="Registracija korisnika"/></h1>
+                    <p:panelGrid columns="2">
+                        <p:outputLabel value="IdKorisnik:" for="idKorisnik" rendered="false" />
+                        <p:inputText id="idKorisnik" value="#{korisnikbean.korisnik.idKorisnik}" title="IdKorisnik" 
+                                     required="true" requiredMessage="The IdKorisnik field is required."
+                                     rendered="false"/>
+                        <p:outputLabel value="Ime:" for="ime" />
+                        <p:inputText id="ime" value="#{korisnikbean.korisnik.ime}" title="Ime" />
+                        <p:outputLabel value="Prezime:" for="prezime" />
+                        <p:inputText id="prezime" value="#{korisnikbean.korisnik.prezime}" title="Prezime" />
+                        <p:outputLabel value="Jmbg:" for="jmbg" />
+                        <p:inputText id="jmbg" value="#{korisnikbean.korisnik.jmbg}" title="Jmbg" />
+                        <p:outputLabel value="NazivBicikla:" for="nazivBicikla" />
+                        <p:inputText id="nazivBicikla" value="#{korisnikbean.korisnik.nazivBicikla}" title="NazivBicikla" />
+                        <p:outputLabel value="TipBicikla:" for="tipBicikla" />
+                        <p:selectOneMenu id="tipBicikla" value="#{korisnikbean.korisnik.tipBicikla}" >
+                            <f:selectItem itemLabel="Select One" itemValue="" />
+                            <f:selectItems value="#{korisnikbean.tipoviBicikla()}" var="tip"
+                                           itemLabel="#{tip}" itemValue="#{tip}"/>
 
 
-                    </p:selectOneMenu>
-                    <p:outputLabel value="Email:" for="email" />
-                    <p:inputText id="email" value="#{korisnikbean.korisnik.email}" title="Email" required="true" requiredMessage="The Email field is required."/>
-                    <p:outputLabel value="Password:" for="password" />
-                    <p:inputText id="password" value="#{korisnikbean.korisnik.password}" title="Password" required="true" requiredMessage="The Password field is required."/>
-                    <p:outputLabel value="Username:" for="username" />
-                    <p:inputText id="username" value="#{korisnikbean.korisnik.username}" title="Username" required="true" requiredMessage="The Username field is required."/>
-                    <p:outputLabel value="Mesto:" for="mestoID" />
-                    <p:selectOneMenu id="mestoID" value="#{korisnikbean.mestoId}" >
-                        <f:selectItem itemLabel="Select One" itemValue="" />
-                        <f:selectItems value="#{korisnikbean.svaMesta()}" var="m"
-                                       itemLabel="#{m.naziv}" itemValue="#{m.idMesto}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Email:" for="email" />
+                        <p:inputText id="email" value="#{korisnikbean.korisnik.email}" title="Email" required="true" requiredMessage="The Email field is required."/>
+                        <p:outputLabel value="Password:" for="password" />
+                        <p:inputText id="password" value="#{korisnikbean.korisnik.password}" title="Password" required="true" requiredMessage="The Password field is required."/>
+                        <p:outputLabel value="Username:" for="username" />
+                        <p:inputText id="username" value="#{korisnikbean.korisnik.username}" title="Username" required="true" requiredMessage="The Username field is required."/>
+                        <p:outputLabel value="Mesto:" for="mestoID" />
+                        <p:selectOneMenu id="mestoID" value="#{korisnikbean.mestoId}" >
+                            <f:selectItem itemLabel="Select One" itemValue="" />
+                            <f:selectItems value="#{korisnikbean.svaMesta()}" var="m"
+                                           itemLabel="#{m.naziv}" itemValue="#{m.idMesto}"/>
 
 
-                    </p:selectOneMenu>
-                    <p:commandButton value="Submit" id="submit" actionListener="#{korisnikbean.sacuvajKorsinika(korisnikbean.korisnik)}" type="submit"/>
+                        </p:selectOneMenu>
+                        <p:commandButton value="Submit" id="submit" actionListener="#{korisnikbean.sacuvajKorsinika(korisnikbean.korisnik)}" type="submit"/>
 
-                </p:panelGrid>
+                    </p:panelGrid>
 
-            </h:form>
-        </f:view>
+                </h:form>
+            </f:view>
+        </div>
         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
     </h:body>
 </html>
