--- a/PutovanjaMenadzerApp-war/web/svaputovanja.xhtml
+++ b/PutovanjaMenadzerApp-war/web/svaputovanja.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui" 
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head></h:head>
     <h:body>
         <ui:composition template="ltemplate.xhtml">
@@ -13,34 +14,76 @@
                 <f:view>
 
 
-                    <h:form>
+                    <h:form id="sva">
                         <p:dataTable value="#{svaPutovanjaManagedBean.putovanja}" var="item" widgetVar="putovanjeTable"
-                                     emptyMessage="No cars found with given criteria" filteredValue="#{svaPutovanjaManagedBean.filtriranaPutovanja}">
+                                     emptyMessage="Nema putovanja" filteredValue="#{svaPutovanjaManagedBean.filtriranaPutovanja}">
 
                             <f:facet name="header">
                                 <p:outputPanel>
-                                    <h:outputText value="Search all fields:" />
+                                    <h:outputText value="Pretraga:" />
                                     <p:inputText id="globalFilter" onkeyup="PF('putovanjeTable').filter()" style="width:150px" placeholder="Enter keyword"/>
                                 </p:outputPanel>
                             </f:facet>
 
-                            <p:column filterBy="#{item.naziv}" headerText="naziv" footerText="stats" filterMatchMode="startsWith">
+                            <p:column sortBy="#{item.naziv}" filterBy="#{item.naziv}" headerText="naziv"  filterMatchMode="startsWith">
                                 <f:facet name="header">
                                     <h:outputText value="Naziv"/>
                                 </f:facet>
                                 <h:outputText value="#{item.naziv}"/>
                             </p:column>
-                            <p:column filterBy="#{item.biciklistaId}" headerText="biciklista" footerText="stats" filterMatchMode="startsWith">
+                            <p:column filterBy="#{item.biciklistaId}" headerText="biciklista" filterMatchMode="startsWith">
                                 <f:facet name="header">
                                     <h:outputText value="Biciklista"/>
                                 </f:facet>
                                 <h:outputText value="#{item.biciklistaId}"/>
+                            </p:column>
+                            <p:column headerText="datum">
+                                <f:facet name="header">
+                                    <h:outputText value="Datum "/>
+                                </f:facet>
+                                <h:outputText value="#{item.datumOd}">
+                                    <f:convertDateTime  pattern="dd.MM.yy" />
+
+                                </h:outputText>
+                                -
+                                <h:outputText value="#{item.datumDo}">
+                                    <f:convertDateTime  pattern="dd.MM.yy" />
+
+                                </h:outputText>
+                            </p:column>
+                            <p:column sortBy="#{item.trekList.size()}" width="10%">
+                                <f:facet name="header">
+                                    <h:outputText value="Broj trekova "/>
+                                </f:facet>
+                                <h:outputText value="#{item.trekList.size()}">
+                                </h:outputText>
+                            </p:column>
+                            <p:column sortBy="#{item.korisnikList.size()}" width="10%">
+                                <f:facet name="header">
+                                    <h:outputText value="Broj bicikista na putovanju "/>
+                                </f:facet>
+                                <h:outputText value="#{item.korisnikList.size()+1}">
+                                </h:outputText>
                             </p:column>
                             <p:column>
                                 <p:commandButton value="Prikazi" action="#{svaPutovanjaManagedBean.prikaziPutovanje()}">
                                     <f:setPropertyActionListener value="#{item}" 
                                                                  target="#{svaPutovanjaManagedBean.selektovanoPutovanje}" />
                                 </p:commandButton>
+
+
+
+                                <p:commandButton rendered="#{item.biciklistaId eq logInManagedBean.korisnik}" value="Obrisi" action="#{putovanjeManagedBean.obrisiPutovanje()}" update="@form">
+                                    <f:setPropertyActionListener value="#{item}" 
+                                                                 target="#{svaPutovanjaManagedBean.selektovanoPutovanje}" />
+                                    <p:confirm header="Confirmation" message="Izbrisi putovanje? Brisanjem putovanja bice izbrisani svi trekovi" icon="ui-icon-alert" />
+                                </p:commandButton>
+                                <p:confirmDialog global="true">
+                                    <p:commandButton value="Da" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                                    <p:commandButton value="Ne" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                                </p:confirmDialog>
+
+
                             </p:column>
                         </p:dataTable>
                     </h:form>
