--- a/PutovanjaMenadzerApp-war/web/dodajputovanje.xhtml
+++ b/PutovanjaMenadzerApp-war/web/dodajputovanje.xhtml
@@ -20,12 +20,14 @@
                             <p:outputLabel value="Naziv:" for="naziv" />
                             <p:inputText id="naziv" value="#{putovanjeManagedBean.putovanje.naziv}" title="Naziv" required="true" requiredMessage="The Naziv field is required."/>
                             <p:outputLabel value="DatumOd:" for="datumOd" />
-                            <p:calendar id="datumOd" value="#{putovanjeManagedBean.putovanje.datumOd}" title="DatumOd">
+                            <p:calendar id="datumOd" binding="#{od}" value="#{putovanjeManagedBean.putovanje.datumOd}" title="DatumOd">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
                             </p:calendar>
                             <p:outputLabel value="DatumDo:" for="datumDo" />
                             <p:calendar id="datumDo" value="#{putovanjeManagedBean.putovanje.datumDo}" title="DatumDo">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
+                                <f:attribute name="od" value="#{od}" />
+                                <f:validator validatorId="validator.dateRangeValidator" />
                             </p:calendar>
                             <p:outputLabel value="Mesta:" for="mesta" />
                             <p:pickList id="mesta" value="#{putovanjeManagedBean.mesta}" var="m" itemLabel="#{m.naziv}" itemValue="#{m}"
@@ -33,7 +35,7 @@
 
                         </p:panelGrid>
                         <br/>
-                        <p:commandButton value="Sacuvaj putovanje" type="submit" action="#{putovanjeManagedBean.sacuvajPutovanje()}" update="@all"/>
+                        <p:commandButton value="Sacuvaj putovanje" type="submit" action="#{putovanjeManagedBean.sacuvajPutovanje()}" update="messages"/>
                         <p:growl id="messages" showDetail="true" autoUpdate="true" />
                     </h:form>
 
