--- a/PutovanjaMenadzerApp-war/web/ltemplate.xhtml
+++ b/PutovanjaMenadzerApp-war/web/ltemplate.xhtml
@@ -7,30 +7,38 @@
     <h:head>
         <script src="http://maps.google.com/maps/api/js?sensor=false"
         type="text/javascript"></script>
+        <link href="resources/css/style2.css" rel="stylesheet" type="text/css" />
     </h:head>
     <h:body>
         <div class="page">
             <p:layout fullPage="true">
-                <p:layoutUnit position="north" size="70"  resizable="false" closable="false" collapsible="false">
+                <p:layoutUnit  id="lt" position="north" size="70"  resizable="false" closable="false" collapsible="false">
                     <div style="padding-top: 5px;" class="header">
                         <ui:include src="/header.xhtml" />
                     </div>
                 </p:layoutUnit>
-                <p:layoutUnit position="west" size="300" header="*" resizable="true" closable="false" collapsible="false">
-                    <h:form>
-                        <p:menu>
+                <p:layoutUnit  position="west" size="300" header="*" resizable="true" closable="false" collapsible="false">
+                    <div id="image">
+                        <h:form>
+                            <p:menu>
 
-                            <p:submenu label="Menu">
-                                <p:menuitem value="Dodaj putovanje" outcome="dodajputovanje" icon="ui-icon-home"/>
-                                <p:menuitem value="Sva putovanja"   outcome="svaputovanja" icon="ui-icon-star"/>
-                                <p:menuitem value="Svi korisnici"   outcome="svikorisnici" icon="ui-icon-star"/>
+                                <p:submenu label="Menu">
+                                    <p:menuitem value="Dodaj putovanje" outcome="dodajputovanje" icon="ui-icon-home"/>
+                                    <p:menuitem value="Sva putovanja"   outcome="svaputovanja" icon="ui-icon-star"/>
+                                    <p:menuitem value="Svi korisnici"   outcome="svikorisnici" icon="ui-icon-star"/>
 
-                            </p:submenu>
-                            <ui:insert name="menu">
+                                </p:submenu>
+                                <ui:insert name="menu">
 
-                            </ui:insert>
-                        </p:menu>
-                    </h:form>
+                                </ui:insert>
+
+                            </p:menu>
+
+
+
+                        </h:form>
+                        <img src="resources/images/orange-bicycle-md.png" align="bottom"></img>
+                    </div>
                 </p:layoutUnit>
                 <p:layoutUnit position="center">
                     <div class="content">
